---
title: Inheritance design - employee compensation
---
classDiagram
    direction TB
    class Employee {
        <<abstract>>
        +name : str
        +id : int
        +compute_pay()* float
    }
    class HourlyEmployee {
        +pay_rate : float
        +hours_worked : int = 0
        +employer_cost : float = 1000
        +compute_pay() float
    }
    class SalariedEmployee {
        +monthly_salary : float
        +percentage : float = 1
        +compute_pay() float
    }
    class Freelancer {
        +pay_rate : float
        +hours_worked : int = 0
        +vat_number : str = ""
        +compute_pay() float
    }
    class HourlyEmployeeWithCommission {
        +commission : float = 100
        +contracts_landed : int = 0
        +compute_pay() float
    }
    class SalariedEmployeeWithCommission {
        +commission : float = 100
        +contracts_landed : int = 0
        +compute_pay() float
    }
    class FreelancerWithCommission {
        +commission : float = 100
        +contracts_landed : int = 0
        +compute_pay() float
    }
    Employee <|-- HourlyEmployee
    Employee <|-- SalariedEmployee
    Employee <|-- Freelancer
    HourlyEmployee <|-- HourlyEmployeeWithCommission
    SalariedEmployee <|-- SalariedEmployeeWithCommission
    Freelancer <|-- FreelancerWithCommission
